# terminy

./: .gitignore  README.md  setup.cfg  setup.py
src/terminy/: __init__.py
