[metadata]
name = terminy
version = 0.0.1
author = Samuel Corradi
author_email = samuelcorradi@gmail.com
description = Utility for Python scripts to receive parameters via terminal like a breeze.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samuelcorradi/terminy
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Desktop Environment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Shells
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.8

[options.packages.find]
where = src